# Robot_Simulation

./: Cargo.toml  README.md
.cargo/: config.toml
maps/: world_map  world_map_small
src/: errors.rs  logic.rs  main.rs  rocket.rs  structs.rs  utils.rs
static/: discovery_stats.html  home.css  index.html  life_stats.html  zombies_stats.html
templates/: discovery_stats.html.tera  index.html.tera  life_stats.html.tera  zombies_stats.html.tera
